Fix line-height of post titles
- Titles of blog posts now have more white space between lines.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -246,7 +246,7 @@ div.cover > img {
 }
 .art-title {
   font-size: 81px;
-  line-height: 1;
+  line-height: 100px;
   letter-spacing: -2px;
   width: 100%;
 }
